{"filter":false,"title":"CMakeLists.txt","tooltip":"/CMakeLists.txt","undoManager":{"mark":-1,"position":-1,"stack":[[{"start":{"row":33,"column":1},"end":{"row":35,"column":61},"action":"remove","lines":["","","install(TARGETS strife DESTINATION ${PROJECT_BINARY_DIR}/bin)"],"id":103}]]},"ace":{"folds":[],"scrolltop":120,"scrollleft":0,"selection":{"start":{"row":32,"column":16},"end":{"row":32,"column":16},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":{"row":7,"state":"start","mode":"ace/mode/text"}},"timestamp":1572303481748,"hash":"c12ee4d5e726d01958aec3990f47e312cf7e0081"}